add quick video links

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -35,6 +35,10 @@
             <span class="notepad-site-head-title-bg">
                 {{ site.title }}
             </span>
+            <span class="notepad-site-head-title-bg">
+                <a href="https://www.youtube.com/watch?v=0qiP6_4KWbk" target="_blank">Quick start guides<a>
+            </span>
+
         </h1>
         <h2 class="notepad-blog-description">{{ site.description }}</h2>
     </div>
