--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,56 +1,53 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-{% include head.html %}
+    {% include head.html %}
 </head>
+
 <body class="home-template" itemscope itemtype="http://schema.org/WebPage">
-<header class="notepad-site-head">
-    <div class="notepad-site-head-menu">
-        <a class="notepad-blog-logo" href="{{ site.url }}"><img src="{{ site.url }}/images/{{ site.logo }}" alt="Blog Logo" /></a>
-        
-        
-        <div class="notepad-blog-menu">      
-    <div class="notepad-mobile-menu show-for-small">
-        <a href="#"><i class="fa fa-bars"></i></a>
-    </div>
-    <ul class="notepad-menu">
-        <li class="notepad-mobile-close-btn show-for-small text-right">
-            <a href="#"><i class="fa fa-times"></i></a>
-        </li>
-{% for link in site.links %}
-            <li>{% if link.external %}
-            <a href="{{ link.url }}" target="_blank">{{ link.title }}</a>
-            {% else %}
-            <a href="{{ site.url }}{{ link.url }}">{{ link.title }}</a>
-            {% endif %} </li>
-{% endfor %}            
-           <li><a href="{{ site.url }}/feed.xml" title="Atom/RSS feed"><i class="icon-rss"></i> Feed</a></li>
-    </ul>
-</div>
-        <div class="clearfix"></div>
-    </div>
-    <div class="notepad-site-head-content" >
-        <div class="notepad-site-head-bg"></div>
-        <h1 class="notepad-blog-title">
+    <header class="notepad-site-head">
+        <div class="notepad-site-head-menu">
+            <a class="notepad-blog-logo" href="{{ site.url }}"><img src="{{ site.url }}/images/{{ site.logo }}" alt="Blog Logo" /></a>
+
+            <div class="notepad-blog-menu">
+                <div class="notepad-mobile-menu show-for-small">
+                    <a href="#"><i class="fa fa-bars"></i></a>
+                </div>
+                <ul class="notepad-menu">
+                    <li class="notepad-mobile-close-btn show-for-small text-right">
+                        <a href="#"><i class="fa fa-times"></i></a>
+                    </li>
+                    {% for link in site.links %}
+                    <li>{% if link.external %}
+                        <a href="{{ link.url }}" target="_blank">{{ link.title }}</a> {% else %}
+                        <a href="{{ site.url }}{{ link.url }}">{{ link.title }}</a> {% endif %} </li>
+                    {% endfor %}
+                    <li><a href="{{ site.url }}/feed.xml" title="Atom/RSS feed"><i class="icon-rss"></i> Feed</a></li>
+                </ul>
+            </div>
+            <div class="clearfix"></div>
+        </div>
+        <div class="notepad-site-head-content">
+            <div class="notepad-site-head-bg"></div>
+            <h1 class="notepad-blog-title">
             <span class="notepad-site-head-title-bg">
                 {{ site.title }}
             </span>
             <span class="notepad-site-head-title-bg">
-                <a href="https://www.youtube.com/watch?v=0qiP6_4KWbk" target="_blank">Quick start guides<a>
+                <a href="https://www.youtube.com/watch?v=0qiP6_4KWbk" target="_blank">Quick start guides</a>
             </span>
 
         </h1>
-        <h2 class="notepad-blog-description">{{ site.description }}</h2>
-    </div>
-</header>
-<main class="notepad-content" role="main">
+            <h2 class="notepad-blog-description">{{ site.description }}</h2>
+        </div>
+    </header>
+    <main class="notepad-content" role="main">
 
-            {{ content }}
+        {{ content }}
 
-
-</main>
-    {% include footer.html %}
-
-{% include scripts.html %}  
+    </main>
+    {% include footer.html %} {% include scripts.html %}
 </body>
+
 </html>
