--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -34,9 +34,9 @@
             <span class="notepad-site-head-title-bg">
                 {{ site.title }}
             </span>
-            <span class="notepad-site-head-title-bg">
+            <button class="notepad-site-head-title-bg">
                 <a href="https://www.youtube.com/watch?v=0qiP6_4KWbk" target="_blank">Quick start guides</a>
-            </span>
+            </button>
 
         </h1>
             <h2 class="notepad-blog-description">{{ site.description }}</h2>
